--- a/P3_Text_Preprocessing_Level3/WordEmbedding.ipynb
+++ b/P3_Text_Preprocessing_Level3/WordEmbedding.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,7 +8,10 @@
     "\n",
     "https://machinelearningmastery.com/use-word-embedding-layers-deep-learning-keras/\n",
     "\n",
-    "See Word Embedding Intuition part to Understand How Word Embedding works"
+    "See Word Embedding Intuition part to Understand How Word Embedding works\n",
+    "\n",
+    "1. You can either train your Own Word Embeddings like we will do now\n",
+    "2. Use pretrained embeddings i-e Glove "
    ]
   },
   {
@@ -378,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
